added validators to vendors,
changes in tender-details,works,inventory

--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -51,7 +51,7 @@
         <div class="d-inline">
           <p class="d-inline">Approval Managment System</p>
         </div>
-        <div class="d-inline float-right">
+        <div class="d-inline float-right mr-5">
           <nz-avatar
             nzIcon="user"
             nzSrc="../../../assets/images/avatar.png"
