changes in works,funds,departments API changes

--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.html
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.html
@@ -9,12 +9,7 @@
 <nz-content id="component-content">
   <div id="search-create">
     <nz-input-group [nzSuffix]="suffixIconSearch">
-      <input
-        type="text"
-        nz-input
-        placeholder="Search"
-        [(ngModel)]="searchText"
-      />
+      <input type="text" nz-input placeholder="Search" [(ngModel)]="searchText" />
     </nz-input-group>
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
@@ -24,13 +19,7 @@
     </button>
   </div>
 
-  <nz-table
-    #basicTable
-    [nzData]="departments"
-    nzShowPagination
-    nzShowSizeChanger
-    [nzPageSizeOptions]="[5, 10, 15, 20]"
-  >
+  <nz-table #basicTable [nzData]="departments" nzShowPagination nzShowSizeChanger [nzPageSizeOptions]="[5, 10, 15, 20]">
     <thead>
       <tr>
         <th nzWidth="100px">S.No.</th>
@@ -42,12 +31,10 @@
       </tr>
     </thead>
     <tbody>
-      <tr
-        *ngFor="
+      <tr *ngFor="
           let data of basicTable.data | globalTablesearch : searchText;
           let i = index
-        "
-      >
+        ">
         <td>{{ i + 1 }}</td>
         <td>{{ data.department_name }}</td>
         <td>{{ data.ranking }}</td>
@@ -55,71 +42,33 @@
         <td>{{ data.created_date | date : "dd-MM-YYYY hh:mm aaa" }}</td>
         <td>
           <div id="editbtn">
-            <a nz-tooltip="Edit" (click)="edit(data)"
-              ><i class="fa-regular fa-pen-to-square"></i
-            ></a>
+            <a nz-tooltip="Edit" (click)="edit(data)"><i class="fa-regular fa-pen-to-square"></i></a>
             <b> / </b>
-            <a nz-tooltip="View" (click)="edit(data)"
-              ><i class="fa-regular fa-eye"></i
-            ></a>
+            <a nz-tooltip="View" (click)="edit(data)"><i class="fa-regular fa-eye"></i></a>
           </div>
         </td>
       </tr>
     </tbody>
   </nz-table>
 </nz-content>
-<nz-drawer
-  [nzBodyStyle]="{ overflow: 'auto' }"
-  [nzMaskClosable]="true"
-  [nzWidth]="600"
-  [nzVisible]="visible"
-  [nzTitle]="drawerTitle"
-  [nzFooter]="footerTpl"
-  (nzOnClose)="close()"
-  [nzClosable]="false"
-  [nzCloseIcon]="icon"
-  [nzExtra]="icon"
->
+<nz-drawer [nzBodyStyle]="{ overflow: 'auto' }" [nzMaskClosable]="true" [nzWidth]="600" [nzVisible]="visible"
+  [nzTitle]="drawerTitle" [nzFooter]="footerTpl" (nzOnClose)="close()" [nzClosable]="false" [nzCloseIcon]="icon"
+  [nzExtra]="icon">
   <ng-template #icon>
     <i (click)="close()" class="fa-solid fa-circle-xmark"></i>
   </ng-template>
-  <form
-    nz-form
-    *nzDrawerContent
-    [formGroup]="departmentForm"
-    class="drawer-form"
-  >
+  <form nz-form *nzDrawerContent [formGroup]="departmentForm" class="drawer-form">
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="10" class="required"
-          >Department Name</nz-form-label
-        >
-        <nz-form-control
-          nz-col
-          nzSpan="12"
-          nzHasFeedback
-          [nzErrorTip]="deptErrorTp"
-        >
-          <input
-            nz-input
-            formControlName="department_name"
-            type="text"
-            nz-input
-            placeholder="Please Enter Department Name"
-          />
+        <nz-form-label nz-col nzSpan="10" class="required">Department Name</nz-form-label>
+        <nz-form-control nz-col nzSpan="12" nzHasFeedback [nzErrorTip]="deptErrorTp">
+          <input nz-input formControlName="department_name" type="text" nz-input
+            placeholder="Please Enter Department Name" />
           <ng-template #deptErrorTp let-control>
-            <ng-container *ngIf="control.hasError('required')"
-              >Please Enter Department Name</ng-container
-            >
-            <ng-container *ngIf="control.hasError('maxlength')"
-              >Maxlength is 50 <br
-            /></ng-container>
-            <ng-container *ngIf="control.hasError('minlength')"
-              >Minlength is 10 <br
-            /></ng-container>
-            <ng-container *ngIf="control.hasError('pattern')"
-              >Please Enter Valid Department Name</ng-container
-            >
+            <ng-container *ngIf="control.hasError('required')">Please Enter Department Name</ng-container>
+            <ng-container *ngIf="control.hasError('maxlength')">Maxlength is 50 <br /></ng-container>
+            <ng-container *ngIf="control.hasError('minlength')">Minlength is 10 <br /></ng-container>
+            <ng-container *ngIf="control.hasError('pattern')">Please Enter Valid Department Name</ng-container>
           </ng-template>
         </nz-form-control>
       </nz-form-item>
@@ -127,33 +76,17 @@
 
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="10" class="required"
-          >Ranking</nz-form-label
-        >
+        <nz-form-label nz-col nzSpan="10" class="required">Ranking</nz-form-label>
         <nz-form-control nz-col nzSpan="12" nzErrorTip="Please Enter Rank">
-          <input
-            nz-input
-            formControlName="ranking"
-            type="number"
-            nz-input
-            placeholder="Please Enter Rank"
-          />
+          <input nz-input formControlName="ranking" type="number" nz-input placeholder="Please Enter Rank" />
         </nz-form-control>
       </nz-form-item>
     </div>
 
     <div>
       <nz-form-item>
-        <nz-form-label nz-col nzSpan="10" class="required"
-          >Status</nz-form-label
-        >
-        <nz-select
-          formControlName="status"
-          nz-col
-          nzSpan="12"
-          nzPlaceHolder="Status"
-          nzShowSearch
-        >
+        <nz-form-label nz-col nzSpan="10" class="required">Status</nz-form-label>
+        <nz-select formControlName="status" nz-col nzSpan="12" nzPlaceHolder="Status" nzShowSearch>
           <nz-option nzValue="active" nzLabel="active"></nz-option>
           <nz-option nzValue="inactive" nzLabel="inactive"></nz-option>
         </nz-select>
@@ -181,10 +114,10 @@
       <button nz-button style="margin-right: 8px" (click)="close()">
         Cancel
       </button>
-      <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
+      <button nz-button *ngIf="submit" nzType="primary" (click)="onCreateSubmit()">
         Submit
       </button>
-      <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdate()">
+      <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdateSubmit()">
         Update
       </button>
     </div>
