--- a/Frontend/src/app/modules/funds/components/funds/funds.component.html
+++ b/Frontend/src/app/modules/funds/components/funds/funds.component.html
@@ -161,7 +161,7 @@
       <nz-form-item>
         <nz-form-label class = "required" nz-col nzSpan="5">Date</nz-form-label>
         <nz-form-control nz-col nzSpan="10" nzErrorTip="Enter Date">
-          <nz-date-picker formControlName="fund_released_date"></nz-date-picker>
+          <nz-date-picker  [nzFormat]="dateFormat" formControlName="fund_released_date"></nz-date-picker>
         </nz-form-control>
       </nz-form-item>
     </div>
