tender and Invoice changes

--- a/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
+++ b/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
@@ -113,7 +113,7 @@
       <nz-form-item>
         <nz-form-label class="required" nz-col nzSpan="5">Assign to</nz-form-label>
         <nz-form-control nzErrorTip="please select a user">
-          <nz-select nz-col nzSpan="15" nzMode="multiple" formControlName="assign_to"
+          <nz-select nz-col nzSpan="15" nzMode="multiple" formControlName="tender_user_status"
             nzPlaceHolder="Select User to assign" [nzOptions]="departmentUsers">
           </nz-select>
         </nz-form-control>
